--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.16.2",
     "element-ui": "^1.3.7",
     "vue": "^2.3.3",
+    "vue-infinite-scroll": "^2.0.1",
     "vue-lazyload": "^1.0.5",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
