--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jd-vue-node",
+  "name": "vue-node-mall",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "yucccc <13450003105@163.com>",
@@ -14,6 +14,7 @@
     "axios": "^0.16.2",
     "element-ui": "^1.3.7",
     "vue": "^2.3.3",
+    "vue-cookie": "^1.1.4",
     "vue-infinite-scroll": "^2.0.1",
     "vue-lazyload": "^1.0.5",
     "vue-router": "^2.3.1",
