--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "image-cropper.js": "^0.3.1",
     "vue": "^2.3.3",
     "vue-cookie": "^1.1.4",
+    "vue-cropper": "^0.1.7",
     "vue-infinite-scroll": "^2.0.1",
     "vue-lazyload": "^1.0.5",
     "vue-router": "^2.3.1",
